# Super-Mega-Mind-Reader-3000

./: .gitignore  README.md  full_dataset.csv  partial_dataset.csv  pyproject.toml  requirements.txt  test.csv  test.txt
models/: README.md
notebooks/: merge_datasets_based_on_timestamp.ipynb  process_dataset.ipynb  train.ipynb
src/: README.md  subject_gui.py  super_mega_mind_reader_3000.py
src/data/: data_collector.py  dataset_handler.py  key_logger.py  utils.py  visual_key_logger.py
src/gui/: gui.py  gui_unit_test.py  test_window.py
src/models/: model.py
src/utils/: find_port.py
