[tool.poetry]
name = "super-mega-mind-reader-3000"
version = "0.1.0"
description = ""
authors = ["Carlos A. <cjacjacja@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
dearpygui = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
